Scrollbar, Server stopping

--- a/src/main/java/chat/client/client.css
+++ b/src/main/java/chat/client/client.css
@@ -111,8 +111,9 @@ div.message#server {
     margin-top: 10px;
 }
 
-div#window-chat i {
+i {
     opacity: 50%;
+    font-size: smaller;
 }
 
 button {
@@ -179,5 +180,25 @@ button:active {
       transform-origin: 100% 0%;
       opacity: 1;
     }
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 16px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+    opacity: 100%;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--soft);
+    width: 10px;
+    border: 4px solid var(--background);
+    border-radius: 8px;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--main);
 }
 
